# bpoe-ocr

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  justfile  pyproject.toml
docker/: .dockerignore  .env.template  Dockerfile  docker-compose.yml  init-minio.sh  minio-init.sh  mongo-init.sh
docker/result/: pytest_result.xml
docs/: 01_ADR-UV_Package_manager.md  02_MiniIO_as_S3_development_replacement.md  03_Workflow_and_Endpoints.md
src/: conf_logger.py  config.py  lifespan.py  main.py
src/api/: exceptions.py  routers.py  schemas.py
src/core/: exceptions.py
src/core/documentstorage/: exceptions.py  models.py  utils.py
src/core/filestorage/: abc_connector.py  connector.py  exceptions.py  utils.py
src/core/ocr/: exceptions.py  utils.py
src/filestorage/: connector.py  exceptions.py  utils.py
tests/: .env.test  conftest.py  test_api.py  test_main.py
tests/core/: test_connector.py  test_mongo_connector.py  test_mongo_connector_integration.py  test_ocr_utils.py
tests/result/: pytest_result.xml
