[project]
name = "bpoe-ocr"
version = "0.1.0"
description = "Placeholder"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.36.17",
    "fastapi>=0.115.8",
    "opencv-python>=4.11.0.86",
    "pydantic[email]>=2.11.2",
    "pymongo>=4.12.0",
    "pytesseract>=0.3.13",
    "python-decouple>=3.8",
    "python-multipart>=0.0.20",
    "scipy>=1.15.2",
    "uvicorn>=0.34.0",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "codespell>=2.4.1",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "ruff>=0.10.0",
]
[tool.pytest]
pythonpath = "./src"

[tool.pytest.ini_options]
addopts = "--junitxml=./result/pytest_result.xml --cov=src --cov-report html:result/html"
filterwarnings = [
    "ignore::UserWarning",
    'ignore:function ham\(\) is deprecated:DeprecationWarning',
    "ignore:module 'sre_constants' is deprecated:DeprecationWarning",
    "ignore::SyntaxWarning",
]

[tool.ruff]
extend-exclude = []
line-length = 124
exclude = ["tests/*"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 124

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F401", "F841"]
"test_*.py" = ["F401", "F841"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.params.Depends", "fastapi.Query", "fastapi.params.Query"]

[tool.mypy]
files = ["src"]
exclude = ["tests/", "migrations/", "src/db/models.py"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "src.db.models"
disable_error_code = ["call-arg"]
