[project]
name = "bpoe-ocr"
version = "0.1.0"
description = "Placeholder"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.36.17",
    "fastapi>=0.115.8",
    "opencv-python-headless>=4.11.0.86",
    "pydantic[email]>=2.11.2",
    "pymongo>=4.12.0",
    "pytesseract>=0.3.13",
    "python-decouple>=3.8",
    "python-multipart>=0.0.20",
    "scipy>=1.15.2",
    "uvicorn>=0.34.0",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "codespell>=2.4.2",
    "commitizen>=4.16.2",
    "httpx>=0.28.1",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "ruff>=0.10.0",
    "testcontainers[mongodb]>=4.14.2",
    "ty>=0.0.38",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = ["--junitxml=./result/pytest_result.xml", "--cov=src", "--cov-report=html:result/html"]
asyncio_mode = "auto"
markers = [
    "unit: fast isolated unit tests (no external services)",
    "integration: tests that require external services — run with -m integration",
    "regression: regression tests for known bugs",
]
filterwarnings = [
    "ignore::UserWarning",
    'ignore:function ham\(\) is deprecated:DeprecationWarning',
    "ignore:module 'sre_constants' is deprecated:DeprecationWarning",
    "ignore::SyntaxWarning",
    "ignore::pydantic.warnings.PydanticDeprecatedSince20",
    "ignore:'asyncio.*' is deprecated:DeprecationWarning:pytest_asyncio",
    "ignore:'asyncio.*' is deprecated:DeprecationWarning:fastapi",
]

[tool.coverage.run]
data_file = "result/.coverage"

[tool.ruff]
extend-exclude = []
line-length = 124
exclude = ["tests/*"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 124

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F401", "F841"]
"test_*.py" = ["F401", "F841"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.params.Depends", "fastapi.Query", "fastapi.params.Query", "fastapi.File", "fastapi.params.File"]

[tool.ty.src]
exclude = ["tests/*"]

[tool.codespell]
skip = """
./.git,
./.github,
./tests/.*,
./log/.*,
./result/.*
"""
builtin = "clear"
quiet-level = 3

[tool.bandit]
targets = ["src"]
exclude_dirs = ["tests"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
]
change_type_order = ["feat", "fix", "hotfix", "chore", "docs", "refactor", "test"]

schema_pattern = "(build|chore|ci|docs|feature|feat|fix|hotfix|perf|refactor|style|test|config)(\\(.+\\))?!?: .+"

[tool.commitizen.schema_mapping]
feature = "feat"
hotfix = "fix"
config = "chore"

[[tool.commitizen.customize.questions]]
type = "list"
name = "type"
message = "Prefix?"
choices = [
    { value = "feat", name = "feature" },
    { value = "fix", name = "hotfix" },
    { value = "chore", name = "config" },
    { value = "refactor", name = "refactor" },
    { value = "docs", name = "docs" },
    { value = "test", name = "tests" },
    { value = "chore", name = "chore/other" },
]

[tool.commitizen.change_type_map]
feat = "Features"
fix = "Bug Fixes"
hotfix = "Hotfixes"
chore = "Chores"
docs = "Documentation"
refactor = "Refactors"
test = "Tests"
